# anomalies-detecting

./: .gitignore  CMakeLists.txt  README.md  anomalies-detecting.cpp  anomalies-detecting.h  anomalies-detecting.sln  anomalies-detecting.vcxproj  anomalies-detecting.vcxproj.filters  main.cpp  motion-detecting.cpp  motion-detecting.sln  motion-detecting.vcxproj  motion-detecting.vcxproj.filters  nanoflann.hpp
